--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@air/react-drag-to-select": "^5.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
