--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^5.15.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
